feat: enabled to view coding problem

--- a/web/courses/templates/courses/course_detail.html
+++ b/web/courses/templates/courses/course_detail.html
@@ -8,6 +8,13 @@
             <li>
                 <a href="./{{chapter.slug}}">{{ chapter.title }}</a>
             </li>
+            <ul>
+                {% for coding_problem in chapter.coding_problems %}
+                <li>
+                    <a href="./{{chapter.slug}}/{{coding_problem.slug}}">{{ coding_problem }}</a>
+                </li>
+            {% endfor %}
+            </ul>
         {% endfor %}
     </ul>
 {% endblock %}
