--- a/web/courses/templates/courses/coding_problem.html
+++ b/web/courses/templates/courses/coding_problem.html
@@ -29,8 +29,9 @@
 <h1>{{coding_problem.title}}</h1>
 <p>{{coding_problem.description | safe }}</p>
 <p>Code:</p>
-<form action="/submit" method="post">
-    <textarea id='code'></textarea>
+<form action="./submit" method="post">
+    {% csrf_token %}
+    <textarea name='code' id='code'>{% for sol in user_solutions %}{% if forloop.last %}{{ sol.input }}{% endif %}{% endfor %}</textarea>
     <br>
     <div class="buttons">
         <button type="submit" id='run'>Run</button>
@@ -38,8 +39,18 @@
     </div>
 </form>
 <p>Output:</p>
-<textarea id='output'></textarea>
+<textarea id='output'>
+{% if user_output %}{{user_output}}{% endif %}
+</textarea>
 <br>
+{% if user_solutions %}
+    <p>Previous submissions:</p>
+    <ul>
+        {% for solution in user_solutions %}
+            <li>{{solution}}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <script src="{% static 'js/code.js' %}" type="text/javascript"></script>
 <link rel="stylesheet" href="{% static 'css/code.css' %}">
 {% endblock %}
