--- a/web/courses/templates/courses/course_detail.html
+++ b/web/courses/templates/courses/course_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>{{course.title}}</h1>
-    <p>{{course.description}}</p>
+    <p>{{course.description | safe}}</p>
     <ul>
         {% for chapter in chapters %}
             <li>
